5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4065/executions/1789_1619.log
== TEST (2019-05-29 18:09:06) 
-- CODE:
from numpy import *

a = array(eval(input("digite o vetor: "))
b = array(eval(input("digite o modo de banho: ")))
-- ERROR:
File "XXXX", line 4
    b = array(eval(input()))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:09:36) 
-- CODE:
from numpy import *

a = array(eval(input("digite o vetor: "))
b = array(eval(input("digite o modo de banho: "))
-- ERROR:
File "XXXX", line 4
    b = array(eval(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:10:01) 
-- CODE:
from numpy import *

a = array(eval(input("digite o vetor: "))

-- ERROR:
File "XXXX", line 4
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:10:10) 
-- CODE:
from numpy import *

a = array(eval(input("digite o vetor: "))
-- ERROR:
File "XXXX", line 4
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:10:27) 
-- CODE:
from numpy import *

a = array(eval("digite o vetor: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:10:55) 
-- CODE:
from numpy import *

a = array(eval(input("digite o vetor: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:11:39) 
-- CODE:
from numpy import *

a = array(eval(input("digite o vetor: ")))
b = array(eval(input("digite o modo de banho: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:26:14) 
-- CODE:
from numpy import *

a = array(eval(input("digite o vetor: ")))
b = array(eval(input("digite o modo de banho: ")))

quente = 90
morno = 45
frio = 0

if(a == quente):
	print()
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:28:46) 
-- CODE:
from numpy import *

a = array(eval(input("digite o vetor: ")))
b = array(eval(input("digite o modo de banho: ")))

w90 = quente
w45 = morno
w0 = frio


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:28:52) 
-- CODE:
from numpy import *

a = array(eval(input("digite o vetor: ")))
b = array(eval(input("digite o modo de banho: ")))

w90 = quente
w45 = morno
w0 = frio


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:30:52) 
-- CODE:
from numpy import *

a = array(eval(input("digite o vetor: ")))
b = input("digite o modo de banho: ")



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:31:06) 
-- CODE:
from numpy import *

a = array(eval(input("digite o vetor: ")))
b = input("digite o modo de banho: ")



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:37:16) 
-- CODE:
from numpy import *

a = array(eval(input("digite o vetor: ")))
quente = 90
morno = 45
frio = 0

b = input("digite o modo de banho: ")

if()



	
-- ERROR:
File "XXXX", line 10
    if()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:37:23) 
-- CODE:
from numpy import *

a = array(eval(input("digite o vetor: ")))
quente = 90
morno = 45
frio = 0

b = input("digite o modo de banho: ")





	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:37:50) 
-- CODE:
from numpy import *

a = array(eval(input("digite o vetor: ")))
quente = 90
morno = 45
frio = 0

b = input("digite o modo de banho: ")





	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:39:21) 
-- CODE:
from numpy import *

a = array(eval(input("digite o vetor: ")))
quente = 90
morno = 45
frio = 0

b = input("digite o modo de banho: ")

if([0] == [b])





	
-- ERROR:
File "XXXX", line 10
    if([0] == [b])
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:53:41) 
-- CODE:
from numpy import *

a = array(eval(input("digite o vetor: ")))

w90 = quente
w45 = morno
w0 = frio

b = input("digite o modo de banho: ")

valor_por_ minuto = 0.005

quente = valor_por_minuto
morno =  valor_por_minuto / 2
morno = 0 









	
-- ERROR:
File "XXXX", line 11
    valor_por_ minuto = 0.005
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:54:06) 
-- CODE:
from numpy import *

a = array(eval(input("digite o vetor: ")))

w90 = quente
w45 = morno
w0 = frio

b = input("digite o modo de banho: ")

vpm = 0.005

quente = valor_por_minuto
morno =  valor_por_minuto / 2
morno = 0 









	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:59:30) 
-- CODE:
from numpy import *

a = array(eval(input("digite o vetor: ")))
b = input("digite o modo de banho: ")

vpm = 0.005

quente = valor_por_minuto
morno =  valor_por_minuto / 2
morno = 0 

print(max[b])








	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:00:01) 
-- CODE:
from numpy import *

a = array(eval(input("digite o vetor: ")))
b = input("digite o modo de banho: ")

vpm = 0.005

print(max[b])








	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:00:33) 
-- CODE:
from numpy import *

a = array(eval(input("digite o vetor: ")))
b = input("digite o modo de banho: ")

vpm = 0.005

print(max[a])








	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:01:03) 
-- CODE:
from numpy import *

a = array(eval(input("digite o vetor: ")))


vpm = 0.005

print(max[a])








	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:01:19) 
-- CODE:
from numpy import *

a = array(eval(input("digite o vetor: ")))


vpm = 0.005

max[a]








	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:02:01) 
-- CODE:
from numpy import *

a = array(eval(input("digite o vetor: ")))


vpm = 0.005

print(max([a]))








	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:02:12) 
-- CODE:
from numpy import *

a = array(eval(input("digite o vetor: ")))


vpm = 0.005

print(max([a]))








	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:03:04) 
-- CODE:
from numpy import *

a = array(eval(input("digite o vetor: ")))


vpm = 0.005

print(max([a]))








	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:07:29) 
-- CODE:
from numpy import *

a = array(eval(input("digite o vetor: ")))




print(max([a]))








	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:07:46) 
-- CODE:
from numpy import *

a = array(eval(input("digite o vetor: ")))




max([a])








	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
